WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129452
Crash tapping on play button on video on iOS
https://bugs.webkit.org/show_bug.cgi?id=129452
Summary
Crash tapping on play button on video on iOS
Simon Fraser (smfr)
Reported
2014-02-27 14:48:11 PST
Crash tapping on play button on video on iOS
Attachments
Patch
(1.65 KB, patch)
2014-02-27 14:48 PST
,
Simon Fraser (smfr)
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-02-27 14:48:54 PST
Created
attachment 225414
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-02-27 14:49:12 PST
Ben reviewed this
Simon Fraser (smfr)
Comment 3
2014-02-27 14:49:21 PST
Comment on
attachment 225414
[details]
Patch r+ says ben
Simon Fraser (smfr)
Comment 4
2014-02-27 14:50:28 PST
https://trac.webkit.org/r164831
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug