Crash tapping on play button on video on iOS https://bugs.webkit.org/show_bug.cgi?id=129452

Reviewed by Benjamin Poulain.

node->computedStyle() can return null. Just use
renderer->style() to get the tap highlight color.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::tapHighlightAtPosition):

Canonical link: https://commits.webkit.org/147518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164831 268f45cc-cd09-0410-ab3c-d52691b4dbfc